# audiotee-wasapi

./: .gitignore  ALTERNATIVE_BUILD.md  BUILD_FIX.md  CMakeLists.txt  CMakeLists_local.txt  COMMIT_GUIDE.md  COMMIT_MESSAGE.txt  COMMIT_NOW.md  LAYERED_REFACTORING.md  PROJECT_STRUCTURE.md  QUICK_FIX.md  README.md  README_CN.md  REFACTORING_SUMMARY.md  SETUP_LIBSAMPLERATE.md  build.bat  download_libsamplerate.bat  download_libsamplerate.sh  test_build.bat
.github/workflows/: build-release.yml
docs/: ARCHITECTURE.md  AUDIO_CONVERSION.md  CODE_STRUCTURE.md  QUICK_START.md  RELEASE_GUIDE.md  RESAMPLING.md  TROUBLESHOOTING.md
scripts/: build.bat  build_simple.bat
src/: main.cpp  wasapi_capture.cpp
src/core/: audio_resampler.cpp  audio_resampler.h  wasapi_capture.h  wasapi_capture_impl.cpp
src/utils/: common.h  error_handler.cpp  error_handler.h
